# android-base16384

./: README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/release/: app-release.aab  app-release.apk  output-metadata.json
app/src/androidTest/java/top/fumiama/base16384/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitio.h
app/src/main/cpp/base14/: CMakeLists.txt  base16384.c  base16384.cpp  base16384.h  base16384.hpp  file.c
app/src/main/cpp/base14/32/: CMakeLists.txt  base1432le.c
app/src/main/cpp/base14/64/: CMakeLists.txt  base1464le.c
app/src/main/cpp/base2_14/: CMakeLists.txt  base16384.cpp  base16384.h
app/src/main/cpp/lzma1900/: CMakeLists.txt
app/src/main/cpp/lzma1900/jni/: lzma.c
app/src/main/java/top/fumiama/base16384/: MainActivity.kt
app/src/main/java/top/fumiama/base16384/tools/: PropertiesTools.kt
app/src/main/res/drawable-anydpi/: ic_add.xml  ic_launcher_background.xml  ic_xi.xml  rndbg_white.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: charsets.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/top/fumiama/base16384/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
